--- a/force-app/main/default/aura/ApproveLanguageIRB/ApproveLanguageIRB.css
+++ b/force-app/main/default/aura/ApproveLanguageIRB/ApproveLanguageIRB.css
@@ -14,6 +14,11 @@
     max-height: 500px;
 }
 
+.THIS .sorted-column {
+    display: flex;
+    justify-content: center;
+}
+
 .THIS .empty-approved-lang {
     background-color: antiquewhite;
 }
