--- a/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
+++ b/force-app/main/default/aura/PPStudyWorkspace/PPStudyWorkspace.cmp
@@ -215,7 +215,7 @@
                     </aura:if>
                 </div>
             </div>
-
+            <c:ParticipantIRBChecker peId="{!v.studyDetail.pe.Id}"/>
         </aura:if>
     </div>
 </aura:component>
