--- a/force-app/main/default/aura/MyTeam/MyTeam.cmp
+++ b/force-app/main/default/aura/MyTeam/MyTeam.cmp
@@ -11,13 +11,15 @@
     <aura:attribute name="delegateOptions" type="List" access="private"/>
     <aura:attribute name="hasStudies" type="Boolean" access="private"/>
     <aura:attribute name="ignoreUpdates" type="Boolean" default="false"/>
-
+    <aura:attribute name="piDelegateParents" type="List" default="[]"/>
+    <aura:attribute name="piSelectedParent" type="String" default=""/>
 
     <!-- methods: -->
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
 
     <!-- handlers: -->
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+    <aura:handler name="change" value="{!v.piSelectedParent}" action="{!c.doInit}"/>
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
 
     <!-- actions: -->
@@ -28,6 +30,15 @@
         <c:RRSpinner aura:id="mainSpinner" size="medium" showSpinner="{!v.showSpinner}"/>
         <c:Action_SaveDelegateLevelChanges aura:id="saveDelegateLevelChanges"
                                            userMode="{!v.userMode}"/>
+        <aura:if isTrue="{!!empty(v.piDelegateParents)}">
+            <div class="delegate-parent-tabs">
+                <c:rrButtonTubSet>
+                    <aura:iteration items="{!v.piDelegateParents}" var="delegateParent">
+                        <c:rrButtonTubSetItem title="{!delegateParent.label}" tabId="{!delegateParent.value}" currentTab="{!v.piSelectedParent}"/>
+                    </aura:iteration>
+                </c:rrButtonTubSet>
+            </div>
+        </aura:if>
         <div class="slds-grid slds-wrap slds-gutters">
             <div class="slds-col slds-size_1-of-1 slds-medium-size_4-of-12 slds-order_2 slds-medium-order_1">
                 <div class="mt-button-container">
