--- a/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
+++ b/force-app/main/default/aura/NewTeamMember/NewTeamMember.cmp
@@ -5,13 +5,14 @@
 <aura:component implements="forceCommunity:availableForAllPageTypes" description="NewTeamMember"
                 controller="MyTeamRemote">
     <ltng:require styles="{!join(',', $Resource.rr_community_css, $Resource.proximanova + '/proximanova.css')}"
-                  scripts="{!join(',', $Resource.rr_community_js)}"/>
+                  scripts="{!join(',', $Resource.rr_community_js)}"
+                  afterScriptsLoaded="{!c.doInit}"/>
 
     <!-- attributes: -->
     <aura:attribute name="userMode" type="String" description="HCP / PI / Participant" access="private"/>
     <aura:attribute name="isStaff" type="Boolean" access="private"/>
     <aura:attribute name="isInitialized" type="Boolean" default="false"/>
-    <aura:attribute name="showSpinner" type="Boolean" default="{!true}" access="private"/>
+    <aura:attribute name="showSpinner" type="Boolean" default="true" access="private"/>
     <aura:attribute name="delegate" type="Object" access="private"/>
     <aura:attribute name="delegateOptions" type="List" access="private"/>
     <aura:attribute name="currentTab" type="String" default="all-same"/>
@@ -26,7 +27,7 @@
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
 
     <!-- handlers:-->
-    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
+<!--    <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>-->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
     <aura:handler name="change" value="{!v.delegate.delegateContact.Email}" action="{!c.doCheckEmail}"/>
     <aura:handler name="change" value="{!v.delegate.delegateContact.FirstName}" action="{!c.doCheckContactData}"/>
@@ -39,7 +40,7 @@
     <aura:if isTrue="{!v.isInitialized}">
         <div class="rr-top-bar multi-mode" id="stickyBar" aura:id="stickyBar">
             <div class="rr-width-limiter side-padding">
-                <c:RRLink page="{!'settings?tab=' + if(v.isStaff,'my-team','delegates')}">
+                <c:RRLink page="{!'my-team'}">
                     <c:RRIcon iconName="icon-arrow-left"/>
                     {!v.isStaff ? $Label.c.PG_NTM_BTN_Back_to_My_Team : $Label.c.PG_PST_L_Delegates_Back}
                 </c:RRLink>
@@ -66,7 +67,7 @@
                             <div class="button-panel-mobile rr-medium-up-hide">
                                 <div class="slds-grid slds-wrap slds-gutters slds-grid_vertical-align-center">
                                     <div class="slds-col slds-size_2-of-5 slds-medium-size_1-of-3">
-                                        <c:RRLink page="{!'settings?tab=' + if(v.isStaff,'my-team','delegates')}">
+                                        <c:RRLink page="{!'my-team'}">
                                             <c:RRIcon iconName="icon-arrow-left"/>
                                             {!v.isStaff ? $Label.c.PG_NTM_BTN_Back_to_My_Team : $Label.c.PG_PST_L_Delegates_Back}
                                         </c:RRLink>
@@ -148,7 +149,7 @@
                             <div class="button-panel rr-medium-down-hide">
                                 <div class="slds-grid slds-wrap slds-gutters slds-grid_vertical-align-center">
                                     <div class="slds-col slds-size_2-of-5 slds-medium-size_1-of-3">
-                                        <c:RRLink page="{!'settings?tab=' + if(v.isStaff,'my-team','delegates')}">
+                                        <c:RRLink page="{!'my-team'}">
                                             <c:RRIcon iconName="icon-arrow-left"/>
                                             {!v.isStaff ? $Label.c.PG_NTM_BTN_Back_to_My_Team : $Label.c.PG_PST_L_Delegates_Back}
                                         </c:RRLink>
