--- a/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.cmp
+++ b/force-app/main/default/aura/StudyDelegateLevelItem/StudyDelegateLevelItem.cmp
@@ -12,14 +12,14 @@
     <aura:attribute name="ignoreUpdates" type="Boolean" default="false"/>
 
     <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>
-    <aura:handler name="change" value="{!v.studyLevel.delegateLevel}" action="{!c.onLevelChange}"/>
+<!--    <aura:handler name="change" value="{!v.studyLevel.delegateLevel}" action="{!c.onLevelChange}"/>-->
 
     <aura:method name="refresh" action="{!c.doInit}" access="public"/>
 
 
     <div class="{!'slds-grid slds-wrap slds-gutters slds-grid_vertical-align-center sdli-container '+if(v.showStudyName,'show-study','')}">
         <div class="{!if(v.showStudyName,'slds-col slds-size_2-of-5 slds-medium-size_1-of-5','slds-col slds-size_1-of-1 slds-medium-size_1-of-1')}">
-            <c:rrSelect value="{!v.studyLevel.delegateLevel}" options="{!v.options}" class="sdli-select" disabled="{!v.studyLevel.readOnly}"/>
+            <c:rrSelect value="{!v.studyLevel.delegateLevel}" options="{!v.options}" class="sdli-select" disabled="{!v.studyLevel.readOnly}" onchange="{!c.onLevelChange}"/>
         </div>
         <aura:if isTrue="{!v.showStudyName}">
             <div class="slds-col slds-size_3-of-5 slds-medium-size_4-of-5">
