--- a/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
+++ b/force-app/main/default/aura/VisitReportContainer/VisitReportContainer.cmp
@@ -13,11 +13,11 @@
     <aura:attribute name="reportData" type="Object"/>
     <aura:attribute name="isReportData" type="Boolean"/>
     <aura:attribute name="documentName" type="String" default="Visit Summary Report"/>
-    <aura:attribute name="peId" type="String" />
+    <aura:attribute name="peId" type="String"/>
 
     <aura:attribute name="errorMessage" type="String" default=""/>
 
-<!--        <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>-->
+    <!--        <aura:handler name="init" value="{!this}" action="{!c.doInit}"/>-->
 
     <div class="{!'sdv-top-bar ' + if(v.multiMode, 'multi-mode', '')}" id="stickyBar" aura:id="stickyBar">
         <div class="navigation rr-width-limiter side-padding">
@@ -53,7 +53,7 @@
                                 </div>
                             </td>
                             <td class="study-document-column-data study-document-title-data">
-                                <div onclick="{!c.onGenerateReport}" data-ind="{!ind}"  class="resource-pointer">
+                                <div onclick="{!c.onGenerateReport}" data-ind="{!ind}" class="resource-pointer">
                                     {!report.studyCodeName}
                                 </div>
                             </td>
@@ -88,7 +88,7 @@
                 <tr>
                     <aura:iteration items="{!tableReport.tHead}" var="tableHead">
                         <th style="text-align: center;">
-                           <div style="text-transform: none; font-size: 8px; display: block"> {!tableHead.value} </div>
+                            <div style="text-transform: none; font-size: 8px; display: block"> {!tableHead.value} </div>
                             <aura:if isTrue="{!tableHead.isShowRange}">
                                 <div style="text-transform: none; font-size:4px; font-weight: normal"> {!'\n ' + $Label.c.Report_Expected_Range + ' ' + tableHead.minValue + ' - ' + tableHead.maxValue}</div>
                             </aura:if>
@@ -111,5 +111,7 @@
         </aura:iteration>
     </div>
 
-    <c:ParticipantIRBChecker peId="{!v.peId}"/>
+    <aura:if isTrue="{!!empty(v.peId)}">
+        <c:ParticipantIRBChecker peId="{!v.peId}"/>
+    </aura:if>
 </aura:component>
