--- a/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
+++ b/force-app/main/default/aura/TravelVendorPanel/TravelVendorPanel.cmp
@@ -10,11 +10,8 @@
     <aura:attribute name="selectedCountryCodes" type="String"/>
     <aura:attribute name="selectedByCountrySSIds" type="List"/>
     <aura:attribute name="selectedManuallySSIds" type="String"/>
-    <aura:attribute name="selectedVendorIds" type="List" default="{}"/>
-    <aura:attribute name="vendors" type="List" default="{}"/>
-    <aura:attribute name="vendorItems" type="List" default="{}"/>
-
-    <aura:handler name="vendorCreated" event="c:TravelVendorCreateEvt" action="{!c.onAddTravelVendor}"/>
+    <aura:attribute name="vendors" type="List" default="[]"/>
+    <aura:attribute name="vendorItems" type="List" default="[]"/>
 
     <ltng:require scripts="{!$Resource.rr_community_js}" afterScriptsLoaded="{!c.doInit}"/>
 
@@ -27,7 +24,7 @@
             <div class="filters-section">
                 <div class="slds-grid slds-wrap">
                     <!--Country Filter-->
-                    <div class="slds-col slds-size--1-of-2 slds-p-horizontal_medium" >
+                    <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium" >
                             <c:VisitResultSharingCountryLookup
                                    aura:id="countryLookup"
                                    isMultiEntry="true"
@@ -38,7 +35,7 @@
                                    ctpId="{!v.recordId}" includeStates="false"
                                    isInclude="true"/>
                     </div>
-                    <div class="slds-col slds-size--1-of-2 slds-p-horizontal_medium">
+                    <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
                         <c:VisitResultSharingSSLookup
                                 ctpId="{!v.recordId}"
                                 isMultiEntry="true"
@@ -48,21 +45,22 @@
                                 placeholderSelected="Select another Study Site"
                                 includeSS="true"/>
                     </div>
-                    <div class="slds-col slds-size--1-of-2 slds-p-horizontal_medium">
+                    <div class="slds-col slds-size--6-of-12 slds-p-horizontal_medium">
                         <c:RRLookup
                                 objectName="TravelVendorSettings__c"
                                 lookupName="TravelVendor__c"
-                                value="{!v.selectedVendorIds}"
+                                selectedRecords="{!v.vendors}"
+                                onchange="{!c.getFilteredSS}"
                         />
-                    </div>
-                    <div class="slds-col slds-size--1-of-2">
+                      </div>
+                    <div class="slds-col slds-size--4-of-12">
                         <lightning:button onclick="{!c.showModal}"
                                           class="slds-theme_neutral"
                                           variant="neutral"
                                           label="Add Vendor"/>
                     </div>
                     <c:CustomModal aura:Id='customModal' size="small">
-                        <c:AddTravelVendorCmp aura:id="addTravelVendor"/>
+                        <c:AddTravelVendorCmp aura:id="addTravelVendor" onSubmit="{!c.onAddTravelVendor}"/>
                         <aura:set attribute="footer">
                             <lightning:button variant="neutral" type="button" name="close" label="Close"
                                               onclick="{!c.closeModal}"/>
@@ -71,7 +69,7 @@
                         </aura:set>
                     </c:CustomModal>
                     <!--Save changes button-->
-                    <div class="slds-col slds-size--1-of-2 save-btn slds-p-horizontal_medium">
+                    <div class="slds-col slds-size--2-of-12 save-btn slds-p-horizontal_medium">
                         <lightning:button variant="brand" label="Save" onclick="{!c.doSave}"/>
                     </div>
                 </div>
